feat(dbapi): Phase 1 models, migration, enum fix, pre_start tests
- Add 13 DBAPI models + 4 enums (models_dbapi.py)
- SystemUser as app_system_user (avoid PG reserved name)
- Alembic migration f0a1b2c3d4e5_add_dbapi_models_phase1
- SQLEnum: values_callable, name, create_type=False (store .value)
- Docker: docker-compose.test.yml, redis in override
- Scripts: setup-venv.sh, integration-test.sh; Makefile
- Config: DBAPI, Redis, flow control
- Fix test_backend_pre_start, test_test_pre_start (Session mock)
- test_models_dbapi: import + datasource CRUD
- 57 tests passing

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -50,6 +50,12 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:7-alpine
+    restart: "no"
+    ports:
+      - "6379:6379"
+
   adminer:
     restart: "no"
     ports:
@@ -86,6 +92,7 @@ services:
       SMTP_PORT: "1025"
       SMTP_TLS: "false"
       EMAILS_FROM_EMAIL: "noreply@example.com"
+      REDIS_HOST: "redis"
 
   mailcatcher:
     image: schickling/mailcatcher
