feat(phase3): core.pool (connect, health, PoolManager) + MySQL in Docker + integration tests
- core/pool: connect(datasource), execute(), cursor_to_dicts(), health_check(), PoolManager (no driver layer; psycopg/pymysql via pip)
- datasources: preTest/test use pool.connect + health_check
- docker-compose.test.yml: add MySQL 8 for integration tests
- scripts/integration-test.sh: export MYSQL_HOST, MYSQL_PORT, MYSQL_USER, MYSQL_PASSWORD, MYSQL_DATABASE
- tests/core/test_pool_connect.py: integration tests for Postgres and MySQL (connect, health_check, PoolManager)
- pyproject.toml: add cryptography (pymysql + MySQL 8 caching_sha2_password)
- docs: PHASE3_SQL_SCRIPT_ENGINE_PLAN.md (EN), MIGRATION_PLAN_SQLREST.md (no driver), development.md (MySQL in test stack)

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,7 +1,7 @@
-# Docker Compose for integration tests: Postgres + Redis.
+# Docker Compose for integration tests: Postgres + Redis + MySQL.
 # Use: docker compose -f docker-compose.test.yml up -d --wait
 # Then run backend tests with POSTGRES_SERVER=localhost REDIS_HOST=localhost
-# Or use: make integration-test
+# and MYSQL_HOST=localhost (or use: make integration-test)
 
 services:
   db:
@@ -17,6 +17,22 @@ services:
       interval: 3s
       retries: 10
       start_period: 5s
+      timeout: 5s
+
+  mysql:
+    image: mysql:8
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: app
+      MYSQL_USER: app
+      MYSQL_PASSWORD: app
+    ports:
+      - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      interval: 5s
+      retries: 10
+      start_period: 15s
       timeout: 5s
 
   redis:
