--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pyjwt<3.0.0,>=2.8.0",
     "redis>=5.0.0",
     "pymysql>=1.1.0",
+    "cryptography>=42.0.0",
 ]
 
 [dependency-groups]
