--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "redis>=5.0.0",
     "pymysql>=1.1.0",
     "cryptography>=42.0.0",
+    "restrictedpython>=7.0",
 ]
 
 [dependency-groups]
