feat: Add API parameter validation, unpublish/delete APIs, and improve API Dev UI
- Add parameter configuration (name, location, data_type, is_required, validate_type, validate) for API assignments
- Add migration to add params column to api_context table
- Add unpublish endpoint and UI for APIs
- Add delete functionality for APIs and modules
- Create API Dev layout with tabs for Modules and APIs
- Improve API search functionality (search across all modules)
- Add sidebar submenu for API Dev (Modules, APIs)
- Fix module_id not persisting in API edit form
- Fix page_size validation (max 100)
- Fix CORS configuration in docker-compose
- Update frontend services to handle null values properly

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -93,6 +93,7 @@ services:
       SMTP_TLS: "false"
       EMAILS_FROM_EMAIL: "noreply@example.com"
       REDIS_HOST: "redis"
+      FRONTEND_HOST: "http://localhost:5173"
 
   mailcatcher:
     image: schickling/mailcatcher
