--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -32,11 +33,13 @@
     "@tanstack/react-router": "^1.142.11",
     "@tanstack/react-router-devtools": "^1.142.8",
     "@tanstack/react-table": "^8.21.3",
+    "@wasm-fmt/ruff_fmt": "^0.14.14",
     "axios": "1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "form-data": "4.0.5",
     "lucide-react": "^0.556.0",
+    "monaco-editor": "^0.55.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.2.3",
@@ -45,6 +48,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
+    "sql-formatter": "^15.7.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "zod": "^4.2.1"
