feat: Python script as execute(params), standard API response, pandas/extra modules, Python suggest
- Python script: content as def execute(params=None), default result envelope {success, message, data}
- Pre-fill script content when creating API (SELECT 1, db.query); inject result in script context
- SCRIPT_EXTRA_MODULES config + script-extras deps (pandas, numpy) for optional libs in script
- Python editor: suggest db/http/cache/env/log/tx/params; register completions once to fix duplicates
- Standard API response: SQL -> {data} (1 stmt = rows, multi = [stmt1, stmt2]); SCRIPT -> {success, message, data} at top level
- Gateway + debug: normalize_api_result by engine; gateway error -> {success: false, message, data: []}
- SQL executor: always return list of stmt results; single stmt -> data = rows (no extra wrap)
- Tests + frontend types/docs updated

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -36,6 +36,11 @@ dev = [
     "types-passlib<2.0.0.0,>=1.7.7.20240106",
     "coverage<8.0.0,>=7.4.3",
 ]
+# Optional: for SCRIPT_EXTRA_MODULES (e.g. pandas, numpy). Install: uv sync --group script-extras
+script-extras = [
+    "pandas>=2.0.0",
+    "numpy>=1.24.0",
+]
 
 [build-system]
 requires = ["hatchling"]
