feat: gateway config cache, Redis, per-API/client rate limit
- Add Redis service to docker-compose.yml
- Gateway config cache (Redis): cache ApiContext/VersionCommit for content, params, validate, transform
- Shared redis_client.py for cache and rate limit
- Connect ScriptContext cache to Redis
- Per-API/client rate limit: rate_limit_per_minute on ApiAssignment and AppClient
- Default: no limit; apply when configured via UI
- check_rate_limit accepts optional limit param
- Invalidate gateway config on API update, publish, restore
- UI: rate limit field on API create/edit and Client create/edit
- Migration 002_add_rate_limit_per_minute

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,15 @@ services:
       - POSTGRES_USER=${POSTGRES_USER?Variable not set}
       - POSTGRES_DB=${POSTGRES_DB?Variable not set}
 
+  redis:
+    image: redis:7-alpine
+    restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   adminer:
     image: adminer
     restart: always
@@ -87,6 +96,9 @@ services:
       db:
         condition: service_healthy
         restart: true
+      redis:
+        condition: service_healthy
+        restart: true
       prestart:
         condition: service_completed_successfully
     env_file:
@@ -110,6 +122,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD?Variable not set}
       - SENTRY_DSN=${SENTRY_DSN}
       - SCRIPT_EXTRA_MODULES=${SCRIPT_EXTRA_MODULES:-pandas,numpy}
+      - REDIS_HOST=redis
 
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/utils/health-check/"]
