Phase G + docs in English: script sandbox/timeout, version rollback; Phase E health/concurrent; translate .md to English
- Phase G: Document SCRIPT_EXTRA_MODULES and SCRIPT_EXEC_TIMEOUT in PARAMS_USAGE.md and backend README (Unix SIGALRM, Windows behaviour). Version rollback API + UI already present.
- Phase E: Health check (DB/Redis), max concurrent per client (gateway + concurrent.py), Redis start_period, CONCURRENT_LIMIT_LOGIC.md, test scripts.
- Translate docs to English: PARAMS_USAGE, IMPROVEMENT_PLAN, CONCURRENT_LIMIT_LOGIC, README_TEST_CONCURRENT, RESPONSE_FORMAT_AUDIT, development.md, VERSION_COMMIT (E2E with Playwright).
- README/SECURITY branding, PHASE_STATUS/PHASE5 updates, ApiContentEditor snippets, ClientFormDialog max_concurrent, GatewayApiKeySettings, gateway auth/ratelimit.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 10s
 
   adminer:
     image: adminer
@@ -123,6 +124,10 @@ services:
       - SENTRY_DSN=${SENTRY_DSN}
       - SCRIPT_EXTRA_MODULES=${SCRIPT_EXTRA_MODULES:-pandas,numpy}
       - REDIS_HOST=redis
+      # Concurrent limit: global max in-flight per client (0 = no limit). Per-client override in DB.
+      - FLOW_CONTROL_MAX_CONCURRENT_PER_CLIENT=${FLOW_CONTROL_MAX_CONCURRENT_PER_CLIENT:-10}
+      # Set CONCURRENT_DEBUG=1 to print concurrent acquire/release to stdout (docker compose logs backend)
+      - CONCURRENT_DEBUG=${CONCURRENT_DEBUG:-0}
 
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/utils/health-check/"]
