--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "app"
+name = "pydbapi-backend"
 version = "0.1.0"
-description = ""
+description = "pyDBAPI Backend - DB API platform with FastAPI"
 requires-python = ">=3.10,<4.0"
 dependencies = [
     "fastapi[standard]<1.0.0,>=0.114.2",
