--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "fastapi-full-stack-template",
+  "name": "pydbapi",
   "private": true,
   "workspaces": [
     "frontend"
   ],
- "scripts": {
+  "scripts": {
     "dev": "bun run --filter frontend dev",
     "lint": "bun run --filter frontend lint",
     "test": "bun run --filter frontend test",
