feat: path_prefix root module + single app rollback; docs; alembic consolidate; admin RBAC
- Gateway: when path_prefix='/' endpoint is /{path} (root module resolve)
- Frontend: use /{path} when path_prefix='/' (apis, repository, groups, ClientFormDialog, api-columns)
- Rollback to single FastAPI app, gateway router last; fastapi run in Docker/override
- Resolver: get_root_modules, resolve_root_module; tests
- Docs: MODULE_PATH_PREFIX_VS_NAME.md
- Alembic: consolidate to 001_initial_schema
- Admin: Roles, permissions UI (CreateRole, EditRolePermissions, Can, RoutePermissionGuard)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,7 +25,7 @@ ENV PATH="/app/.venv/bin:$PATH"
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --frozen --no-install-workspace --package app
+    uv sync --frozen --no-install-workspace --package pydbapi-backend
 
 COPY ./backend/scripts /app/backend/scripts
 
@@ -38,7 +38,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     --mount=type=bind,source=backend/pyproject.toml,target=backend/pyproject.toml \
-    uv sync --frozen --package app --group script-extras
+    uv sync --frozen --package pydbapi-backend --group script-extras
 
 WORKDIR /app/backend/
 
