--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -69,11 +69,7 @@ services:
       context: .
       dockerfile: backend/Dockerfile
     # command: sleep infinity  # Infinite loop to keep container alive doing nothing
-    command:
-      - fastapi
-      - run
-      - --reload
-      - "app/main.py"
+    command: fastapi run --reload app/main.py
     develop:
       watch:
         - path: ./backend
