feat: Trino datasource, optional password, clear password, Trino SSL/HTTPS
- Add Trino as datasource type (backend + frontend, migration 004)
- Docker Compose: add trino service (port 9080)
- Password optional for create/preTest; allow updating password to empty (checkbox on edit)
- Add use_ssl for Trino: HTTPS support, password required when SSL enabled (migration 005)
- Frontend: Use SSL/HTTPS checkbox for Trino, validation when enabled

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,18 @@ services:
     # volumes:
     #   - starrocks-be:/opt/starrocks/be/storage
 
+  trino:
+    image: trinodb/trino
+    restart: always
+    ports:
+      - "9080:8080"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -sf http://127.0.0.1:8080/v1/info/state || exit 1"]
+      interval: 15s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+
   adminer:
     image: adminer
     restart: always
