Unified Docker, gateway /api path, path+method uniqueness, StarRocks/Trino
- Docker: single docker-compose.yml; move Dockerfile and configs to docker/
  (nginx-unified.conf, supervisord.conf); remove docker-compose.simple,
  override, test, traefik and Dockerfile.unified; add StarRocks and Trino
  services
- Gateway: API URL is /api/{path} only (module for permissions); path+HTTP
  method unique across all modules; validation on create/update
- Frontend: all gateway URLs use /api/{api.path}; remove module prefix from
  URL builders; Vite proxy and empty VITE_API_URL for same-origin
- Makefile and integration-test.sh use docker-compose.yml

Signed-off-by: 1Pro-L4R8 <hoangquocvietbk2.13@gmail.com>

--- a/frontend/nginx-backend-not-found.conf
+++ b/frontend/nginx-backend-not-found.conf
@@ -1,10 +1,4 @@
-# Only match /api and /api/, not /api-dev
+# All backend routes are under /api — return 404 when backend is not available
 location ~ ^/api(/|$) {
-    return 404;
-}
-location /docs {
-    return 404;
-}
-location /redoc {
     return 404;
 }
