feat(k8s): add k8s deployment example

--- a/docker/nginx-unified.conf
+++ b/docker/nginx-unified.conf
@@ -18,6 +18,10 @@ server {
         add_header Content-Type text/plain;
     }
 
+    location /api-dev {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
     # All backend routes are under /api
     location /api {
         proxy_pass http://fastapi;
